--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<h2>About Myself</h2>
 						</header>
 						<p>I am currently a Bachelor student in the School of Engineering at the <strong>University of South Florida</strong>. 
-							I am in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
+							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
 							then continue on to perfrom research and obtain my MS of Computer Science. I am an avid software engineer, 
 							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>.
 						</p>
@@ -40,19 +40,21 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://www.google.com" target="_blank" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<h3>Quantum Cryptography: An Outlook on Improving IOT Security</h3>
+								<p>A research paper focusing on improving IoT security through Quantum Cryptography</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/CurtisTD/CompressionProgram" target="_blank" class="image fit thumb"><img src="images/thumbs/Lenna.png" alt="" /></a>
+								<h3>Compression Program</h3>
+								<p>An independent study of a self-made command-line based compression and encryption program</p>
 							</article>
 						</div>
+					<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
+					-->
 					</section>
 
 				<!-- Three -->
