--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.google.com" target="_blank" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="/assets/dwnfiles/Quantum Cryptography.pdf" download="Quantum Computing" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Quantum Cryptography: An Outlook on Improving IOT Security</h3>
 								<p>A research paper focusing on improving IoT security through Quantum Cryptography</p>
 							</article>
@@ -66,6 +66,7 @@
 					<ul class="icons">
 						<li><a href="https://github.com/CurtisTD" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/curtistd/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.researchgate.net/profile/Curtis_Davis5" class="icon brands fa-researchgate" target="_blank"><span class="label">ResearchGate</span></a></li>
 						<li><a href="mailto: ctd@usf.edu" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
