--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/assets/dwnfiles/Quantum Cryptography.pdf" download="Quantum Computing" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="/assets/dwnfiles/QuantumCryptography.pdf" download class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Quantum Cryptography: An Outlook on Improving IOT Security</h3>
 								<p>A research paper focusing on improving IoT security through Quantum Cryptography</p>
 							</article>
