--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Curtis Davis</title>
+		<title>Curtis T Davis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,7 +13,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>
-						<strong>Curtis Davis</strong><br />
+						<strong>Curtis T Davis</strong><br />
 						Student and Research Assistant at<br />
 						the University of South Florida
 					</h1>
@@ -26,12 +26,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>About Myself</h2>
+							<h2>About</h2>
 						</header>
 						<p>I am currently a Bachelor student in the School of Engineering at the <strong>University of South Florida</strong>. 
 							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
 							then continue on to perfrom research and obtain my MS of Computer Science. I am an avid software engineer, 
-							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>.
+							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>. <br /> <br />
+							I am a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic Reeb graph layout algorithms.
 						</p>
 					</section>
 
