--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 					<h1>
 						<strong>Curtis T Davis</strong><br />
 						Student and Research Assistant at<br />
-						the University of South Florida
+						the University of South Florida<br /><br />
 					</h1>
+				</div>
+				<div>
+					<h1>
+						<a href="/assets/dwnfiles/Resume-Curtis_Davis.pdf" download class="button">Resume</a>
+					</h1>					
 				</div>
 			</header>
 
@@ -26,7 +31,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>About</h2>
+							<h2>About <strong>Curtis T Davis</strong></h2>
 						</header>
 						<p>I am currently a Bachelor student in the School of Engineering at the <strong>University of South Florida</strong>. 
 							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
