--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>
-						<strong>Curtis T Davis</strong><br />
+					<h1><strong>Curtis T Davis</strong></h1>
+					<h2>						
 						Student and Research Assistant at<br />
 						the University of South Florida<br /><br />
-					</h1>
+					</h2>
 				</div>
 				<div>
 					<h3>
