--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 				<div>
 					<h3>
-						<a href="/assets/dwnfiles/Resume-Curtis_Davis.pdf" download class="button">Resume</a>
+						<a href="/assets/dwnfiles/Resume-Curtis_Davis.pdf" download class="button">My Resume</a>
 					</h3>					
 				</div>
 			</header>
