--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
 							then continue on to perform research and obtain my MS of Computer Science. I am an avid software engineer, 
 							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>. <br /> <br />
-							I am a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic Reeb graph layout algorithms.
+							I am currently a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic Reeb graph layout algorithms.
 						</p>
 					</section>
 
