--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
 					-->
 					</section>
 
+					<!-- Two -->
+					<section id="three">
+						<h2>Online Skill Assessments</h2>
+						<div class="row">
+							<div class="inner">
+								<ul class="assess-icons">
+									<li><a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank"><span class="label">HackerRank</span></a></li>
+									<!--
+									<li><a href="https://www.firecode.io/pages/profile/48618" class="icon brands fa-hackerrank" target="_blank"><span class="label">Firecode</span></a></li>
+									-->
+								</ul>
+							</div>
+						</div>
+
 				<!-- Three -->
 			</div>
 
