--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 							<h2>About <strong>Curtis T Davis</strong></h2>
 						</header>
 						<p>I am currently an undergraduate student in the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
-						of Computer Science and Engineering</a> at the <strong>University of South Florida</strong>. 
+						of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/">University of South Florida</a>. 
 							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
 							then continue on to perform research and obtain my MS of Computer Science. I am an avid software engineer, 
 							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>. <br /> <br />
-							I am currently a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic Reeb graph layout algorithms.
+							I am currently a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic mapping and layout algorithms for Reeb graphs.
 						</p>
 					</section>
 
