--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 								<p>An independent study of a self-made command-line based compression and encryption program</p>
 							</article>
 						</div>
-					<!--
+					
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/CurtisTD/" class="button">Full Project Portfolio</a></li>
 						</ul>
-					-->
+					
 					</section>
 
 					<!-- Two -->
