--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						</div>
 					
 						<ul class="actions">
-							<li><a href="https://github.com/CurtisTD/" class="button">Full Project Portfolio</a></li>
+							<li><a href="https://github.com/CurtisTD/" target="_blank" class="button">Full Project Portfolio</a></li>
 						</ul>
 					
 					</section>
