--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 							<div class="inner">
 								<ul class="assess-icons">
 									<li><a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank"><span class="label">HackerRank</span></a></li>
-									<!--
-									<li><a href="https://www.firecode.io/pages/profile/48618" class="icon brands fa-hackerrank" target="_blank"><span class="label">Firecode</span></a></li>
-									-->
+
+									<li><a href="https://hyperskill.org/profile/1046909" class="icon brands fa-java" target="_blank"><span class="label">Firecode</span></a></li>
 								</ul>
 							</div>
 						</div>
