--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 		
 	</head>
 	<body class="is-preload">
@@ -97,9 +99,15 @@
 						<div class="row">
 							<div class="inner">
 								<ul class="assess-icons">
-									<li><a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank"><span class="label">HackerRank</span></a></li>
-
-									<!-- <li><a href="https://hyperskill.org/profile/1046909" class="icon brands fa-java" target="_blank"><span class="label">Firecode</span></a></li> -->
+									<li><a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank">
+											<span class="label">HackerRank</span>
+										</a>
+									</li>
+									<!---->
+									<li><a href="https://leetcode.com/curtistd/" style="text-decoration: none"  target="_blank">
+											<span class="iconify icon:simple-icons:leetcode">Leetcode</span>
+										</a>
+									</li>
 								</ul>
 							</div>
 						</div>
