--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
 						<div class="row">
 							<div class="inner">
 								<ul class="assess-icons">
-									<li><a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank">
+									<li>
+										<a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank">
 											<span class="label">HackerRank</span>
 										</a>
 									</li>
 									<!---->
-									<li><a href="https://leetcode.com/curtistd/" style="text-decoration: none"  target="_blank">
+									<li>
+										<a href="https://leetcode.com/curtistd/" style="text-decoration: none"  target="_blank">
 											<span class="iconify icon:simple-icons:leetcode">Leetcode</span>
 										</a>
 									</li>
