--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<h2>About <strong>Curtis T Davis</strong></h2>
 						</header>
 						<p>I am currently an undergraduate student in the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
-						of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/">University of South Florida</a>. 
+						of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/" target="_blank">University of South Florida</a>. 
 							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
 							then continue on to perform research and obtain my MS of Computer Science. I am an avid software engineer, 
 							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>. <br /> <br />
