--- a/index.html
+++ b/index.html
@@ -76,14 +76,25 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/assets/dwnfiles/QuantumCryptography.pdf" download class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Quantum Cryptography: An Outlook on Improving IOT Security</h3>
-								<p>A research paper focusing on improving IoT security through Quantum Cryptography</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/CurtisTD/CompressionProgram" target="_blank" class="image fit thumb"><img src="images/thumbs/Lenna.png" alt="" /></a>
-								<h3>Compression Program</h3>
+								<a href="https://github.com/CurtisTD/CompressionProgram" target="_blank" class="image fit thumb">
+									<img src="images/thumbs/Lenna.png" alt="" />
+								</a>
+								<a href="https://github.com/CurtisTD/CompressionProgram" target="_blank">
+									<h3>Compression Program</h3>
+								</a>
+
 								<p>An independent study of a self-made command-line based compression and encryption program</p>
+							</article>
+							<!--Next Article-->
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="/assets/dwnfiles/QuantumCryptography.pdf" download class="image fit thumb">
+									<img src="images/thumbs/01.jpg" alt="" />
+								</a>
+								<a href="/assets/dwnfiles/QuantumCryptography.pdf" download>
+									<h3>Quantum Cryptography: An Outlook on Improving IOT Security</h3>
+								</a>
+
+								<p>A research paper focusing on improving IoT security through Quantum Cryptography</p>
 							</article>
 						</div>
 					
