added pages and navbar

--- a/about.html
+++ b/about.html
@@ -26,6 +26,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
+		<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+
+		<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 	</head>
 	<body class="is-preload">
@@ -36,18 +40,16 @@
 		</noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
-		<!-- Header -->
 		<div class="topnav" id="myTopnav">
-			<a href="index.html" class="active">Home</a>
+			<a href="index.html">Home</a>
 			<a href="my_work.html">My Work</a>
-			<a href="about.html">About</a>
-
+			<a href="about.html" class="active">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 			  <i class="fa fa-bars"></i>
 			</a>
 		</div>
 
-
+		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
@@ -66,76 +68,44 @@
 
 		<!-- Main -->
 			<div id="main">
+				<div class="row">
 
-				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><strong>Curtis Davis</strong></h2>
+							<h2>About <strong>Curtis T Davis</strong></h2>
 						</header>
-						<p>I am currently an undergraduate student in the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
-						of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/" target="_blank">University of South Florida</a>. 
-							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
-							then continue on to perform research and obtain my MS of Computer Science. I am an avid software engineer, 
-							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>. <br /> <br />
-							I am currently a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic mapping and layout algorithms for Reeb graphs.
+						<p>
+							<img src="images/fulls/valleyOfFire.jpg" alt="" class="selfieImg"/>
+							I was born and raised in Tampa Bay, FL.
+							Other than studying and conducting research for USF, I enjoy many other hobbies.
+							I often enjoy running and hiking, sometimes travelling to other states to find new and exciting trails.
+							One of my favorite places I've visited has been my trip through Arizona and Nevada.
+							I took this trip with my friends where we went from Las Vegas, to the Grand Canyon, then 
+							north to Seattle. My favorite place to visit was Oregon, though the picture presented in this section 
+							was at the <a href=https://en.wikipedia.org/wiki/Valley_of_Fire_State_Park target="_blank">Valley of Fire in
+							Navada.</a>
 						</p>
 					</section>
 
-				<!-- Two -->
 					<section id="two">
-						<h1>Recent Work</h1>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/CurtisTD/CompressionProgram" target="_blank" class="image fit thumb">
-									<img src="images/thumbs/Lenna.png" alt="" />
-								</a>
-								<a href="https://github.com/CurtisTD/CompressionProgram" target="_blank">
-									<h3>Compression Program</h3>
-								</a>
-
-								<p>An independent study of a self-made command-line based compression and encryption program</p>
-							</article>
-							<!--Next Article-->
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="/assets/dwnfiles/QuantumCryptography.pdf" download class="image fit thumb">
-									<img src="images/thumbs/01.jpg" alt="" />
-								</a>
-								<a href="/assets/dwnfiles/QuantumCryptography.pdf" download>
-									<h3>Quantum Cryptography: An Outlook on Improving IOT Security</h3>
-								</a>
-
-								<p>A research paper focusing on improving IoT security through Quantum Cryptography</p>
-							</article>
-						</div>
-					
-						<ul class="actions">
-							<li><a href="https://github.com/CurtisTD/" target="_blank" class="button">Full Portfolio on Github</a></li>
-						</ul>
-					
+							<br/>
+							<p>
+								<img src="images/fulls/enginePic.jpg" alt="" class="selfieImgRight"/>
+								I also enjoy working on cars and other machines in my free time. In the past few years I've swapped
+								the transmission in my '98 Mustang GT, swapped the engine in my 2004 Camry, and have helped many 
+								others with their mechanical issues as well. It was a hobby I had never expected to get into, however
+								I was compelled into it when my car broke down and I had to have a way to commute to school and work.
+								Working on engines has certainly become one of my favorite hobbies, learning how all the inner mechanisms
+								operate and fixing what was broken.
+								</p>
+							<p>
+								I've also had similar experience fixing small engines, such as mowers, pressure washers, and tractors.
+								This was a job I had for two years before I started my research position at USF. Though I don't have 
+								many opportunities now to work on small engines, I do help out my family and friends with my unique 
+								knowledge and experience I had obtained at my past position in machine repairing.
+							</p>
 					</section>
-
-					<!-- Two -->
-					<!--
-					<section id="three">
-						<h2>Online Skill Assessments</h2>
-						<div class="row">
-							<div class="inner">
-								<ul class="assess-icons">
-									<li>
-										<a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank">
-											<span class="label">HackerRank</span>
-										</a>
-									</li>
-									<li>
-										<a href="https://leetcode.com/curtistd/" style="text-decoration: none"  target="_blank">
-											<span class="iconify icon:simple-icons:leetcode">Leetcode</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					-->
-				<!-- Three -->
+				</div>
 			</div>
 
 		<!-- Footer -->
