--- a/my_work.html
+++ b/my_work.html
@@ -26,6 +26,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
+		<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+
+		<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 	</head>
 	<body class="is-preload">
@@ -36,18 +40,16 @@
 		</noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
-		<!-- Header -->
 		<div class="topnav" id="myTopnav">
-			<a href="index.html" class="active">Home</a>
-			<a href="my_work.html">My Work</a>
+			<a href="index.html">Home</a>
+			<a href="my_work.html" class="active">My Work</a>
 			<a href="about.html">About</a>
-
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 			  <i class="fa fa-bars"></i>
 			</a>
 		</div>
 
-
+		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
@@ -70,20 +72,16 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><strong>Curtis Davis</strong></h2>
+							<h2>My Work</h2>
 						</header>
-						<p>I am currently an undergraduate student in the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
-						of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/" target="_blank">University of South Florida</a>. 
-							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
-							then continue on to perform research and obtain my MS of Computer Science. I am an avid software engineer, 
-							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>. <br /> <br />
-							I am currently a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic mapping and layout algorithms for Reeb graphs.
+						<p>Here you will find an excerpt of projects from my portfolio. Some of my works were completed in conjuntion with my courses and
+							positions and USF, while others were completed on my own time. My full portfolio can be found on 
+							<a href="https://github.com/CurtisTD" target="_blank">my Github</a>.
 						</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h1>Recent Work</h1>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/CurtisTD/CompressionProgram" target="_blank" class="image fit thumb">
@@ -103,39 +101,40 @@
 								<a href="/assets/dwnfiles/QuantumCryptography.pdf" download>
 									<h3>Quantum Cryptography: An Outlook on Improving IOT Security</h3>
 								</a>
-
 								<p>A research paper focusing on improving IoT security through Quantum Cryptography</p>
+							</article>
+						</div>
+
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/CurtisTD/GraphMazeSolver" target="_blank" class="image fit thumb">
+									<img src="images/thumbs/graphMaze.jpg" alt="" />
+								</a>
+								<a href="https://github.com/CurtisTD/GraphMazeSolver" target="_blank">
+									<h3>Graph Maze Solver</h3>
+								</a>
+								<p>This project uses the Boost library to implement an algorithm to find a path through a bidirectional maze, 
+									which is implemented as a graph.</p>
+							</article>
+							<!--Next Article-->
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/CurtisTD/FacialRecognition" target="_blank" class="image fit thumb">
+									<img src="images/thumbs/facialRecog.PNG" alt="" />
+								</a>
+								<a href="https://github.com/CurtisTD/FacialRecognition" target="_blank">
+									<h3>Facial Recognition System</h3>
+								</a>
+								<p>This was a group project to develop a facial recognition system to operate on images.</p>
 							</article>
 						</div>
 					
 						<ul class="actions">
-							<li><a href="https://github.com/CurtisTD/" target="_blank" class="button">Full Portfolio on Github</a></li>
+							<li><a href="https://github.com/CurtisTD/" target="_blank" class="button">Full Project Portfolio</a></li>
 						</ul>
 					
 					</section>
 
 					<!-- Two -->
-					<!--
-					<section id="three">
-						<h2>Online Skill Assessments</h2>
-						<div class="row">
-							<div class="inner">
-								<ul class="assess-icons">
-									<li>
-										<a href="https://www.hackerrank.com/curtisdedu" class="icon brands fa-hackerrank" target="_blank">
-											<span class="label">HackerRank</span>
-										</a>
-									</li>
-									<li>
-										<a href="https://leetcode.com/curtistd/" style="text-decoration: none"  target="_blank">
-											<span class="iconify icon:simple-icons:leetcode">Leetcode</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					-->
-				<!-- Three -->
 			</div>
 
 		<!-- Footer -->
