--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@
 						<header class="major">
 							<h2><strong>Curtis Davis</strong></h2>
 						</header>
-						<p>I am currently an undergraduate student in the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
+						<p>I am currently a graduate student in the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
 						of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/" target="_blank">University of South Florida</a>. 
-							I am also in the accelerated Master's program at USF; I will obtain my BS of Computer Science in the Fall of 2020, 
-							then continue on to perform research and obtain my MS of Computer Science. I am an avid software engineer, 
-							with a keen interest in <strong>algorithm design</strong> and <strong>machine learning</strong>. <br /> <br />
-							I am currently a research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. Current research includes developing new automatic mapping and layout algorithms for Reeb graphs.
+							I am an avid software engineer, with a keen interest in <strong>algorithm design</strong> and <strong>computational geometry</strong>. 
+							<br /> <br />
+							I am currently a graduate research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. 
+							Current research includes developing a mobile application for the <a href="https://health.usf.edu/publichealth" target="_blank">College of Public Health </a>
+							at the University of South Florida.
+							<br /> <br />
+							Outside of school, you can find me fishing or practicing archery. I also spend a lot of time rebuilding and fixing cars.
 						</p>
 					</section>
 
