--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 							Current research includes developing a mobile application for the <a href="https://health.usf.edu/publichealth" target="_blank">College of Public Health </a>
 							at the University of South Florida.
 							<br /> <br />
+							With the same professor, I am working on a Master's Thesis. My research for said thesis involves creating an interactive 
+							dimension reduction program using high-order spanning trees to provide insights about the properties of high-dimensional data.
+							<br /> <br />
 							Outside of school, you can find me fishing or practicing archery. I also spend a lot of time rebuilding and fixing cars.
 						</p>
 					</section>
