--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Curtis T Davis</strong></h1>
 					<h2>						
-						Student and Research Assistant at<br />
-						the University of South Florida<br /><br />
+						Software Engineer at <a href="https://about.facebook.com/meta" target="_blank">Meta</a><br />
 					</h2>
 				</div>
 				<div>
 					<h3>
-						<a href="/assets/dwnfiles/Resume-Curtis_Davis.pdf" download class="button">My Resume</a>
+						<!-- <a href="/assets/dwnfiles/Resume-Curtis_Davis.pdf" download class="button">My Resume</a> -->
 					</h3>					
 				</div>
 			</header>
@@ -70,20 +69,23 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><strong>Curtis Davis</strong></h2>
+							<h2><strong>Howdy!</strong></h2>
 						</header>
-						<p>I am currently a graduate student in the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
-						of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/" target="_blank">University of South Florida</a>. 
+						<p>
+							I recently had the amazing opportunity to start as a Software Engineer at <a href="https://about.facebook.com/meta" target="_blank">Meta</a>.
+							<br /> <br />
+							I am a graduate of the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
+							of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/" target="_blank">University of South Florida</a>. 
 							I am an avid software engineer, with a keen interest in <strong>algorithm design</strong> and <strong>computational geometry</strong>. 
 							<br /> <br />
-							I am currently a graduate research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. 
-							Current research includes developing a mobile application for the <a href="https://health.usf.edu/publichealth" target="_blank">College of Public Health </a>
+							I was a graduate research assistant under the supervision of <a href="https://www.cspaul.com/wordpress/" target="_blank">Dr Paul Rosen</a> at USF. 
+							My research included developing a mobile application for the <a href="https://health.usf.edu/publichealth" target="_blank">College of Public Health </a>
 							at the University of South Florida.
 							<br /> <br />
-							With the same professor, I am working on a Master's Thesis. My research for said thesis involves creating an interactive 
+							With the same professor, I worked on a Master's Thesis. My research for said thesis involved creating an interactive 
 							dimension reduction program using high-order spanning trees to provide insights about the properties of high-dimensional data.
 							<br /> <br />
-							Outside of school, you can find me fishing or practicing archery. I also spend a lot of time rebuilding and fixing cars.
+							Outside of school, you can find me hiking, fishing, or practicing archery. I also spend a lot of time rebuilding and fixing cars.
 						</p>
 					</section>
 
