--- a/my_work.html
+++ b/my_work.html
@@ -50,21 +50,20 @@
 		</div>
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Curtis T Davis</strong></h1>
-					<h2>						
-						Student and Research Assistant at<br />
-						the University of South Florida<br /><br />
-					</h2>
-				</div>
-				<div>
-					<h3>
-						<a href="/assets/dwnfiles/Resume-Curtis_Davis.pdf" download class="button">My Resume</a>
-					</h3>					
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<h1><strong>Curtis T Davis</strong></h1>
+				<h2>						
+					Software Engineer at <a href="https://about.facebook.com/meta" target="_blank">Meta</a><br />
+				</h2>
+			</div>
+			<div>
+				<h3>
+					<!-- <a href="/assets/dwnfiles/Resume-Curtis_Davis.pdf" download class="button">My Resume</a> -->
+				</h3>					
+			</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
