--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		  gtag('config', 'UA-173880349-1');
 		</script>
 
+		<link rel="shortcut icon" href="assets/favicon.ico">
+
 		<title>Curtis T Davis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
