Updates my work details

--- a/about.html
+++ b/about.html
@@ -1,6 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<!-- Disable About Page -->
+		<meta http-equiv="refresh" content="0, https://CurtisTDavis.com" />
+
+
 		<!-- Google Tag Manager -->
 		<script>
 			(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -101,7 +105,7 @@
 								I've also had similar experience fixing small engines, such as mowers, pressure washers, and tractors.
 								This was a job I had for two years before I started my research position at USF. Though I don't have 
 								many opportunities now to work on small engines, I do help out my family and friends with my unique 
-								knowledge and experience I had obtained at my past position in machine repairing.
+								knowledge and experience I had obtained at my past position in machine repair.
 							</p>
 					</section>
 				</div>
