--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="topnav" id="myTopnav">
 			<a href="index.html" class="active">Home</a>
 			<a href="my_work.html">My Work</a>
-			<a href="about.html">About</a>
+			<!-- <a href="about.html">About</a> -->
 
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 			  <i class="fa fa-bars"></i>
@@ -74,7 +74,8 @@
 							<h2><strong>Howdy!</strong></h2>
 						</header>
 						<p>
-							I recently had the amazing opportunity to start as a Software Engineer at <a href="https://about.facebook.com/meta" target="_blank">Meta</a>.
+							I have had the great pleasure of taking the role of a Software Engineer at <a href="https://about.facebook.com/meta" target="_blank">Meta</a>.
+							Currently, I work on developing React Web applications across our Family of Apps, including Facebook, Instagram, and Messenger.
 							<br /> <br />
 							I am a graduate of the <a href="https://www.usf.edu/engineering/cse/" target="_blank">Department 
 							of Computer Science and Engineering</a> at the <a href="https://www.usf.edu/" target="_blank">University of South Florida</a>. 
@@ -154,7 +155,7 @@
 					<ul class="icons">
 						<li><a href="https://github.com/CurtisTD" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/curtistd/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://www.researchgate.net/profile/Curtis_Davis5" class="icon brands fa-researchgate" target="_blank"><span class="label">ResearchGate</span></a></li>
+						<!-- <li><a href="https://www.researchgate.net/profile/Curtis_Davis5" class="icon brands fa-researchgate" target="_blank"><span class="label">ResearchGate</span></a></li> -->
 						<li><a href="mailto: ctd@usf.edu" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
