--- a/my_work.html
+++ b/my_work.html
@@ -43,7 +43,7 @@
 		<div class="topnav" id="myTopnav">
 			<a href="index.html">Home</a>
 			<a href="my_work.html" class="active">My Work</a>
-			<a href="about.html">About</a>
+			<!-- <a href="about.html">About</a> -->
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 			  <i class="fa fa-bars"></i>
 			</a>
@@ -73,7 +73,7 @@
 						<header class="major">
 							<h2>My Work</h2>
 						</header>
-						<p>Here you will find an excerpt of projects from my portfolio. Some of my works were completed in conjuntion with my courses and
+						<p>Here you will find an excerpt of projects from my portfolio. Some of my works were completed in conjunction with my courses and
 							positions and USF, while others were completed on my own time. My full portfolio can be found on 
 							<a href="https://github.com/CurtisTD" target="_blank">my Github</a>.
 						</p>
@@ -142,7 +142,7 @@
 					<ul class="icons">
 						<li><a href="https://github.com/CurtisTD" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/curtistd/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://www.researchgate.net/profile/Curtis_Davis5" class="icon brands fa-researchgate" target="_blank"><span class="label">ResearchGate</span></a></li>
+						<!-- <li><a href="https://www.researchgate.net/profile/Curtis_Davis5" class="icon brands fa-researchgate" target="_blank"><span class="label">ResearchGate</span></a></li> -->
 						<li><a href="mailto: ctd@usf.edu" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
